<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="20dp">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/your_position"
        app:startIconDrawable="@drawable/ic_start"
        app:startIconTint="@color/colorPrimary">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/autoCompleteTextViewPosition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:singleLine="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_reception"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reception" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_hall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hall" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_workcoffee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/workcoffee" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_building_cd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/building_cd" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_parking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parking" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_delivery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delivery" />
            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </HorizontalScrollView>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/your_destination"
        app:startIconDrawable="@drawable/ic_location_pointer"
        app:startIconTint="@color/red">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/autoCompleteTextViewDestination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.chip.ChipGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:singleLine="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_reception_destination"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reception" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_hall_destination"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hall" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_workcoffee_destination"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/workcoffee" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_building_cd_destination"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/building_cd" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_parking_destination"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parking" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_delivery_destination"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delivery" />

            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_secure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#9E2626"
            android:textColorHint="#9A2121" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_gravity="center_vertical"
            android:gravity="right|center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btClose"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:backgroundTint="#FFFFFF"
                android:text="@string/cancel"
                android:textColor="@color/black"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/btEnter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:layout_marginTop="15dp"
                android:elevation="0dp"
                android:text="@string/go"
                android:textColor="@color/white"
                app:cornerRadius="20dp" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>